force-app/main/default/objects/UsageRecord__c/UsageRecord__c.object-meta.xml
<CustomObject>
    <label>UsageRecord</label>
    <nameField>
        <label>UsageRecordName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UsageRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>