force-app/main/default/objects/UsageRecord__c/fields/Rated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rated_Amount__c</fullName>
    <label>Rated_Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>