force-app/main/default/objects/UsageRecord__c/fields/Source_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Batch_Id__c</fullName>
    <label>Source_Batch_Id</label>
    <length>23</length>
    <type>Text</type>
</CustomField>