force-app/main/default/objects/UsageRecord__c/fields/Usage_Event_Key__c.field-meta.xml
<CustomField>
    <fullName>Usage_Event_Key__c</fullName>
    <label>Usage_Event_Key</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>